2010-08-15  Per Bothner  <per@bothner.com>

	* repl.java: Fix tab/space problem, which broke PreProcess.

2010-08-06  Per Bothner  <per@bothner.com>

	* lang/Lambda.java (rewriteAttrs): The classes of the throws specifier
	may evaluate to a QuoteExp as well as a ReferenceExp.  Defer
	error-checking and resolution to LambdaExp.addMethodFor.

2010-08-01  Per Bothner  <per@bothner.com>

	* standard/callcc.java (CompileTimeContinuation.compile): Use
	AppendValues when we need to deal with multiple values,
	rather than (incorrectly) Values.make.
	* lang/Translator.java (rewrite): Don't set IS_SINGLE_VALUE in
	Declarations - among other problems it causes a (probably-harmless)
	race condition.
	* lang/Lambda.java (rewriteFormals): Set IS_SINGLE_VALUE on formals.
	* standard/let.java (rewrite): Set IS_SINGLE_VALUE on variables.
	* standard/define.java (scanForm): Likewise.
	* standard/define_variable.java (scanForDefinitions): Likewise.

	* repl.java: Update Language setting calls.
	* Shell.java: Likewise.

	* lang/Eval.java (evalBody): Use new Compilation convenience methods.
	* lang/Translator.java (resolveModule): Likewise.

2010-07-31  Per Bothner  <per@bothner.com>

	* standard/set_b.java (rewriteForm): Don't complain about assigning
	to imported variable it it is dynamic.

2010-07-17  Per Bothner  <per@bothner.com>

	* repl.java:  Remove unneeded package prefixes.

2010-07-07  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): The --servlet flag also sets the
	HttpRequestContext.importServletDefinitions static field.
	* standard/Scheme.java (<clinit>): Import HTTP or servlet library class
	if HttpRequestContext.importServletDefinitions is non-zero.

2010-06-29  Mario Domenech Goulart <mario.goulart@gmail.com>

	* repl.java: Fix typo.

2010-06-21  Per Bothner  <per@bothner.com>

	* lang/Translator.java (rewrite_pair): Check for literal Syntax *after*
	rewrite_pair.  This is needed for macro that returns an xml literal.
